Thu Jun 26 07:37:20 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-settings-typing-break.c: new module to handle the
	typing-break-monitor.

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-06-12  Michael Meeks  <michael@ximian.com>

	* Makefile.am: Make IDL compile depend on compiler too.

Mon Jun  2 13:23:25 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-xrdb.c (append_xresources): Patch from Jens
	Granseuer <jensgr@gmx.net> to fix on non-C99 compilers.

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-07  Jody Goldberg <jody@gnome.org>

	* xrdb/Makefile.am (EXTRA_DIST) : EXTRA_DIST the data files

2003-05-02  Ross Burton  <ross@burtonini.com>

	* gnome-settings-xrdb.c (scan_for_files): 
	If ~/.gnome2/xrdb doesn't exist, don't stop.

	* xrdb/.cvsignore:
	Added.

2003-05-02  Ross Burton  <ross@burtonini.com>

	* xrdb/Makefile.am (xrdbdir):
	$(datadir) is lowercase not uppercase! :(

2003-05-01  Ross Burton  <ross@burtonini.com>

	* gnome-settings-xrdb.[ch]:
	Using the current GTK+ theme as a base for colours, set a bunch of
	properties in the X resource database. And as if by magic, legacy
	apps (Xaw, Tk, Motif) match GNOME!

	* xrdb/*.ad:
	Data files for above.

Thu Feb  6 16:43:33 2003  Jonathan Blandford  <jrb@redhat.com>

	* gnome-settings-font.c (load_xcursor_theme): handle xcursor so
	that we support Xcursor files.

	* gnome-settings-daemon.c: move
	gnome_settings_daemon_spawn_with_input here so multiple modules
	can use it.

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

2003-01-19  Alex Duggan  <aldug@astrolinux.com>

	* gnome-settings-mouse.c (filter), (set_locate_pointer):
	make the right control key also locate the mouse pointer.
	Fixes #87426

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>
